# FloorplanTransformation

./: LICENSE  README.md
annatator/: README.md
annatator/code/: floorplan_utils.lua  g.ui  main.lua
code/: checkpoints.lua  evaluate.lua  main.lua  opts.lua  predict.lua
code/PostProcessing/: QP.py
code/datasets/: floorplan-representation-gen.lua  floorplan-representation.lua  init.lua  transformsBoth.lua  transformsRepresentation.lua
code/models/: heatmap-segmentation-criterion.lua  heatmap-segmentation-dataloader.lua  heatmap-segmentation-train.lua  heatmap-segmentation.lua  init.lua  models.lua
data/: test.txt  train_new.txt  val.txt
popup/code/: CMakeLists.txt  asset.cc  asset.h  popup.cc  popup.h  popup_2d.cc  popup_2d.h  popup_3d.cc  popup_3d.h  popup_cli.cc  structs.cc  structs.h
popup/data/: cooking_counter.mtl  floorplan_1.txt  stairs.mtl  washing_basin.mtl  washing_basin2.mtl
pytorch/: IP.py  IP_gurobi.py  README.md  options.py  predict.py  requirements.txt  train.py  utils.py
pytorch/datasets/: floorplan_dataset.py
pytorch/models/: drn.py  model.py  modules.py
rendering/: floorplan.py  obj2egg.py  renderer.py  viewer.py
rendering/data/: bathtub.mtl  obj2egg.py  toilet.egg  toilet.mtl  washing_basin.egg
util/lua/: .tramp_history  compute_stats.lua  convert_to_json.lua  floorplan_utils.lua  floorplan_utils.lua~  ginit.lua  ginit.lua~  gpath.lua  itorch_utils.lua  nn_utils.lua  nnutils.lua  pointcloud_utils.lua  pointcloud_utils.lua~  remove_batchnorm.lua  representation_utils.lua~  torch7json.lua  utils.lua  utils.lua~  weight-init.lua  (+1 more)
(+1334 files in other folders)
